--- a/P3.Driver.Sonos/P3.Driver.Sonos.csproj
+++ b/P3.Driver.Sonos/P3.Driver.Sonos.csproj
@@ -1,15 +1,13 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-
+<?xml version="1.0" encoding="utf-8"?>
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <Version>0.14.0.1</Version>
   </PropertyGroup>
-
   <ItemGroup>
     <PackageReference Include="Rssdp" Version="4.0.2" />
   </ItemGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\P3.Driver.Sonos.Upnp\P3.Driver.Sonos.Upnp.csproj" />
   </ItemGroup>
-
 </Project>
