--- a/P3.Driver.SonosDriverFactory/P3.Driver.SonosDriverFactory.csproj
+++ b/P3.Driver.SonosDriverFactory/P3.Driver.SonosDriverFactory.csproj
@@ -1,8 +1,8 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <Version>1.0.0.0</Version>
+    <Version>0.14.0.1</Version>
     <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
     <ProjectGuid>42B32C71-399D-499A-BA0C-72F46A498EDE</ProjectGuid>
   </PropertyGroup>
