--- a/Tests/P3.Driver.Sonos.Console/P3.Driver.Sonos.ConsoleApp.csproj
+++ b/Tests/P3.Driver.Sonos.Console/P3.Driver.Sonos.ConsoleApp.csproj
@@ -1,13 +1,12 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-
+<?xml version="1.0" encoding="utf-8"?>
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <Version>0.14.0.1</Version>
   </PropertyGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\..\P3.Driver.Sonos.Upnp\P3.Driver.Sonos.Upnp.csproj" />
     <ProjectReference Include="..\..\P3.Driver.Sonos\P3.Driver.Sonos.csproj" />
   </ItemGroup>
-
 </Project>
