--- a/P3.Driver.SonosDriverFactory/P3.Driver.SonosDriverFactory.csproj
+++ b/P3.Driver.SonosDriverFactory/P3.Driver.SonosDriverFactory.csproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <Version>0.14.0.1</Version>
     <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
     <ProjectGuid>42B32C71-399D-499A-BA0C-72F46A498EDE</ProjectGuid>
@@ -17,9 +17,9 @@
     <EmbeddedResource Include="Resources\Sonos-en.json" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Automatica.Core.Base" Version="2.0.0.741" />
-    <PackageReference Include="Automatica.Core.Driver" Version="2.0.0.741" />
-    <PackageReference Include="Automatica.Core.Driver.Utility" Version="2.0.0.741" />
+    <PackageReference Include="Automatica.Core.Base" Version="5.0.0.817" />
+    <PackageReference Include="Automatica.Core.Driver" Version="5.0.0.817" />
+    <PackageReference Include="Automatica.Core.Driver.Utility" Version="5.0.0.817" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\P3.Driver.Sonos.Upnp\P3.Driver.Sonos.Upnp.csproj" />
