--- a/P3.Driver.SonosDriverFactory/automatica-manifest.json
+++ b/P3.Driver.SonosDriverFactory/automatica-manifest.json
@@ -1,42 +1,1 @@
-{
-	"Automatica": {
-		"manifest-version": {
-			"Major": 0,
-			"Minor": 1,
-			"Build": 0,
-			"Revision": 0,
-			"MajorRevision": 0,
-			"MinorRevision": 0
-		},
-		"plugin-version": {
-			"Major": 1,
-			"Minor": 0,
-			"Build": 0,
-			"Revision": 0,
-			"MajorRevision": 0,
-			"MinorRevision": 0
-		},
-		"PluginGuid": "df404af7-a487-4742-805a-0b871d1b5447",
-		"Name": "P3.Driver.Sonos",
-		"ComponentName": "Sonos",
-		"Type": "driver",
-		"Output": "P3.Driver.SonosDriverFactory.dll",
-		"Resources": [],
-		"Dependencies": [
-			"P3.Driver.Sonos.dll",
-			"P3.Driver.Sonos.Upnp.dll",
-			"Rssdp.dll"
-
-		],
-		"MinCoreServerVersion": {
-			"Major": 0,
-			"Minor": 10,
-			"Build": 0,
-			"Revision": 0,
-			"MajorRevision": 0,
-			"MinorRevision": 0
-		},
-		"MandatoryLicenseFeatures": [],
-		"OptionalLicenseFeatures": []
-	}
-}
+{"Automatica":{"manifest-version":{"Minor":1,"Major":0,"Build":0,"Revision":0},"plugin-version":{"Minor":0,"Major":1,"Build":0,"Revision":0},"PluginGuid":"df404af7-a487-4742-805a-0b871d1b5447","Name":"P3.Driver.Sonos","ComponentName":"Sonos","Type":"driver","Output":"P3.Driver.SonosDriverFactory.dll","Resources":[],"Dependencies":["P3.Driver.Sonos.dll","P3.Driver.Sonos.Upnp.dll","Rssdp.dll"],"ProjectPage":null,"MinCoreServerVersion":{"Minor":0,"Major":5,"Build":0,"Revision":0},"MandatoryLicenseFeatures":[],"OptionalLicenseFeatures":[]}}
