--- a/P3.Driver.SonosDriverFactory/P3.Driver.SonosDriverFactory.csproj
+++ b/P3.Driver.SonosDriverFactory/P3.Driver.SonosDriverFactory.csproj
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <Version>0.14.0.1</Version>
     <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
-    <ProjectGuid>42B32C71-399D-499A-BA0C-72F46A498EDE</ProjectGuid>
+    <ProjectGuid>{B7DF45B1-25BF-470E-BC7A-42E01DE66E35}</ProjectGuid>
   </PropertyGroup>
   <ItemGroup>
     <None Remove="automatica-manifest.json" />
@@ -17,9 +17,9 @@
     <EmbeddedResource Include="Resources\Sonos-en.json" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Automatica.Core.Base" Version="5.0.0.817" />
-    <PackageReference Include="Automatica.Core.Driver" Version="5.0.0.817" />
-    <PackageReference Include="Automatica.Core.Driver.Utility" Version="5.0.0.817" />
+    <PackageReference Include="Automatica.Core.Base" Version="6.0.0.827" />
+    <PackageReference Include="Automatica.Core.Driver" Version="6.0.0.827" />
+    <PackageReference Include="Automatica.Core.Driver.Utility" Version="6.0.0.827" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\P3.Driver.Sonos.Upnp\P3.Driver.Sonos.Upnp.csproj" />
