--- a/P3.Driver.Sonos.Upnp/P3.Driver.Sonos.Upnp.csproj
+++ b/P3.Driver.Sonos.Upnp/P3.Driver.Sonos.Upnp.csproj
@@ -4,4 +4,7 @@
     <TargetFramework>net7.0</TargetFramework>
     <Version>0.14.0.1</Version>
   </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
+  </ItemGroup>
 </Project>
