update sonos driver

--- a/P3.Driver.SonosDriverFactory/P3.Driver.SonosDriverFactory.csproj
+++ b/P3.Driver.SonosDriverFactory/P3.Driver.SonosDriverFactory.csproj
@@ -5,6 +5,7 @@
     <Version>0.14.0.1</Version>
     <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
     <ProjectGuid>{B7DF45B1-25BF-470E-BC7A-42E01DE66E35}</ProjectGuid>
+    <BaseOutputPath>C:\dev\automatica.core\automatica\src\automatica.core\Automatica.Core\bin\Debug\net7.0\Drivers\Sonos</BaseOutputPath>
   </PropertyGroup>
   <ItemGroup>
     <None Remove="automatica-manifest.json" />
