--- a/P3.Driver.SonosDriverFactory/Properties/launchSettings.json
+++ b/P3.Driver.SonosDriverFactory/Properties/launchSettings.json
@@ -4,6 +4,11 @@
       "commandName": "Executable",
       "executablePath": "C:\\dev\\automatica.core\\automatica\\src\\automatica.core\\Automatica.Core\\bin\\Debug\\netcoreapp3.0\\Automatica.Core.exe",
       "workingDirectory": "C:\\dev\\automatica.core\\automatica\\src\\automatica.core\\Automatica.Core\\bin\\Debug\\netcoreapp3.0\\"
+    },
+    "Automatica.Core": {
+      "commandName": "Executable",
+      "executablePath": "C:\\dev\\automatica.core\\automatica\\src\\automatica.core\\Automatica.Core\\bin\\Debug\\net7.0\\Automatica.Core.exe",
+      "workingDirectory": "C:\\dev\\automatica.core\\automatica\\src\\automatica.core\\Automatica.Core\\bin\\Debug\\net7.0\\"
     }
   }
 }
